styles/Benefits.module.css
.title {
  font-family: Playfair Display;
  font-style: normal;
  font-weight: 600;
  font-size: 36px;
  line-height: 48px;
  text-align: center;
  padding-bottom: 100px;
}
.container {
  max-width: 1440px;
  margin: 0 auto;
  padding-top: 80px;
  padding-bottom: 80px;
}
.row1 {
  display: grid;
  grid-template-columns: 250px 250px 250px 250px;
  margin-bottom: 35px;
  justify-content: center;
}
.row2 {
  display: grid;
  grid-template-columns: 250px 250px 250px;
  justify-content: center;
}
.row1,
.row2 {
  font-family: Poppins;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  text-align: center;

  color: #202124;
}
.card {
  max-width: 250px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  text-align: center;
  margin-right: 20px;
}
.card:last-child {
  margin-right: 0;
}
.text {
  margin-top: 20px;
}
.mobile {
  display: none;
}
@media (max-width: 1000px) {
  .row1{
    grid-template-columns: 160px 160px 160px 160px;
  }
  .row2{
    grid-template-columns: 160px 160px 160px;
  }
  .container {
    padding-top: 40px;
  }
  .title{
    padding-bottom: 40px;
  }
}
@media (max-width: 768px) {
  .row1 {
    display: grid;
    grid-template-columns: 160px 160px 160px 160px;
    grid-template-rows: 1fr;
    margin-bottom: 35px;
    justify-content: center;
  }
  .row2 {
    display: grid;
    grid-template-columns: 160px 160px 160px;
    grid-template-rows: 1fr;
    justify-content: center;
  }
  .card{
    margin-right: 5px;
  }
}
@media (max-width: 640px) {
  .desc {
    display: none;
  }
  .mobile {
    display: block;
  }
  .container {
    padding: 10px 0;
  }
  .mobile .text {
    font-family: Poppins;
    font-style: normal;
    font-weight: 500;
    font-size: 12px;
    line-height: 18px;
    text-align: center;
    color: #202124;
  }
  .content {
    position: relative;
  }
  .navigation {
    position: absolute;
    left: calc((100% / 2) - 210px / 2);
    bottom: -20px;
    z-index: 5;
  }
  .dots {
    width: 20px;
    height: 3px;
    margin-right: 30px;
    position: relative;
  }
  .dots::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 20px;
    height: 3px;
    background-color: #ff4e6d;
    border-radius: 2px;
  }
}

